--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   url_launcher: ^6.1.6
   flutter_automation: ^2.0.0
+  persian_number_utility: ^1.1.3
 
   flutter_launcher_icons: ^0.11.0
 
@@ -84,16 +85,11 @@ flutter:
 
 
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Helvtica
+      fonts:
+        - asset: fonts/OpenSans-Regular.ttf
+    - family: Persian
+      fonts:
+        - asset: fonts/shabnam.ttf
 
