--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 2.0.1+1
+version: 2.0.3+4
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -33,6 +33,7 @@ dependencies:
   persian_number_utility: ^1.1.3
 
   flutter_launcher_icons: ^0.11.0
+  double_back_to_close_app: ^2.1.0
 
 
 
