--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 2.0.3+4
+version: 2.1.4+5
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -31,9 +31,12 @@ dependencies:
   url_launcher: ^6.1.6
   flutter_automation: ^2.0.0
   persian_number_utility: ^1.1.3
-
   flutter_launcher_icons: ^0.11.0
   double_back_to_close_app: ^2.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  uuid: ^3.0.7
+  shared_preferences: ^2.1.0
 
 
 
@@ -48,6 +51,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
 
 
 
