--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,7 +52,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "ir.mlggrand.priceList"
+        //applicationId "ir.mlggrand.priceList"
+        applicationId "ir.mlggrand.priceListPro"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion flutter.minSdkVersion
