--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   open_filex: ^4.3.2
   flutter_launcher_icons: ^0.12.0
 
+#  flutter_poolakey:
+#    git:
+#      url: https://github.com/cafebazaar/flutter_poolakey.git
+#      ref: a8777a1
+#  cafebazaar_flutter: ^1.0.2
+  http: ^0.13.6
+
 
 
 
@@ -62,20 +69,20 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/price-list-pro-icon.png"
+  image_path: "assets/images/app_icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "assets/images/price-list-pro-icon.png"
+    image_path: "assets/images/app_icon.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
   windows:
     generate: true
-    image_path: "assets/images/price-list-pro-icon.png"
+    image_path: "assets/images/app_icon.png.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "assets/images/price-list-pro-icon.png"
+    image_path: "assets/images/app_icon.png"
 
 
   flutter_lints: ^2.0.0
