--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 3.0.1+7
+version: 3.1.3+10
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -44,9 +44,10 @@ dependencies:
 #  flutter_poolakey:
 #    git:
 #      url: https://github.com/cafebazaar/flutter_poolakey.git
-#      ref: a8777a1
-#  cafebazaar_flutter: ^1.0.2
+#      ref: master
+
   http: ^0.13.6
+  myket_iap: ^1.1.2
 
 
 
