--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,15 +40,19 @@ dependencies:
   pdf: ^3.9.0
   open_filex: ^4.3.2
   flutter_launcher_icons: ^0.12.0
-
 #  flutter_poolakey:
 #    git:
 #      url: https://github.com/cafebazaar/flutter_poolakey.git
 #      ref: master
 
   http: ^0.13.6
-  myket_iap: ^1.1.2
-
+  myket_iap: ^1.1.4
+  image: ^4.1.3
+  image_compression_flutter: ^1.0.3
+  archive: ^3.4.7
+  expandable: ^5.0.1
+  flutter_slidable: ^2.0.0
+  gap: ^3.0.1
 
 
 
@@ -107,8 +111,23 @@ flutter:
     - family: Helvtica
       fonts:
         - asset: assets/fonts/OpenSans-Regular.ttf
-    - family: Persian
+    - family: Shabnam
       fonts:
         - asset: assets/fonts/shabnam.ttf
-
+    - family: Roya
+      fonts:
+        - asset: assets/fonts/roya.ttf
+        - asset: assets/fonts/royab.ttf
+    - family: Koodak
+      fonts:
+        - asset: assets/fonts/koodak.ttf
+    - family: Terafik
+      fonts:
+        - asset: assets/fonts/terafik.ttf
+    - family: Titr
+      fonts:
+        - asset: assets/fonts/titr.ttf
+    - family: Elham
+      fonts:
+        - asset: assets/fonts/elham.ttf
 
