--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 4.0.2+11
+version: 4.0.3+11
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -44,6 +44,7 @@ dependencies:
 #    git:
 #      url: https://github.com/cafebazaar/flutter_poolakey.git
 #      ref: master
+#  flutter_poolakey: ^2.2.0
 
   http: ^0.13.6
   myket_iap: ^1.1.4
