--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 4.0.4+11
+version: 4.0.5+11
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -135,4 +135,8 @@ flutter:
     - family: Elham
       fonts:
         - asset: assets/fonts/elham.ttf
+    - family: Sahel
+      fonts:
+        - asset: assets/fonts/sahel.ttf
+        - asset: assets/fonts/sahel-Bold.ttf
 
