export version 4.0.8 12 for myket

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,13 +50,13 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
     //TODO:myket market configuration for in app purchase
-//    defaultConfig {
-//        def marketApplicationId = "ir.mservices.market"
-//        def marketBindAddress = "ir.mservices.market.InAppBillingService.BIND"
-//        manifestPlaceholders += [marketApplicationId: "${marketApplicationId}",
-//                                 marketBindAddress  : "${marketBindAddress}",
-//                                 marketPermission   : "${marketApplicationId}.BILLING"]
-//    }
+    defaultConfig {
+        def marketApplicationId = "ir.mservices.market"
+        def marketBindAddress = "ir.mservices.market.InAppBillingService.BIND"
+        manifestPlaceholders += [marketApplicationId: "${marketApplicationId}",
+                                 marketBindAddress  : "${marketBindAddress}",
+                                 marketPermission   : "${marketApplicationId}.BILLING"]
+    }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
