--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 4.0.7+11
+version: 4.0.8+12
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -47,7 +47,7 @@ dependencies:
 #  flutter_poolakey: ^2.1.0
 
   http: ^0.13.6
-#  myket_iap: ^1.1.4
+  myket_iap: ^1.1.4
   image: ^4.1.3
   image_compression_flutter: ^1.0.3
   archive: ^3.4.7
