--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,14 +40,8 @@ dependencies:
   pdf: ^3.9.0
   open_filex: ^4.3.2
   flutter_launcher_icons: ^0.12.0
-#  flutter_poolakey:
-#    git:
-#      url: https://github.com/cafebazaar/flutter_poolakey.git
-#      ref: master
-#  flutter_poolakey: ^2.1.0
-
   http: ^0.13.6
-  myket_iap: ^1.1.4
+#  myket_iap: ^1.1.4
   image: ^4.1.3
   image_compression_flutter: ^1.0.3
   archive: ^3.4.7
@@ -56,6 +50,7 @@ dependencies:
   gap: ^3.0.1
   flutter_animate: ^4.4.0
   lottie: ^2.6.0
+  cafebazaar_flutter: ^1.0.2
 
 
 
@@ -139,4 +134,7 @@ flutter:
       fonts:
         - asset: assets/fonts/sahel.ttf
         - asset: assets/fonts/sahel-Bold.ttf
+    - family: Mitra
+      fonts:
+        - asset: assets/fonts/mitra.ttf
 
