--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 4.1.0+13
+version: 4.2.0+14
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -54,6 +54,7 @@ dependencies:
   google_fonts: ^4.0.4
   package_info_plus: ^4.2.0
 #  bitsdojo_window: ^0.1.5
+  share_plus: ^7.2.2
 
 
 
