--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,5 @@
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
+#this line added for mobile scanner package
+dev.steenbakker.mobile_scanner.useUnbundled=true
