--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 4.2.0+14
+version: 4.3.1+15
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -21,7 +21,7 @@ dependencies:
   provider: ^6.0.3
   dropdown_button2: ^1.8.2
   sqflite: ^2.1.0
-  intl: ^0.17.0
+  intl: ^0.19.0
   permission_handler: ^10.1.0
   auto_size_text: ^3.0.0
   file_picker: ^5.2.1
@@ -55,6 +55,8 @@ dependencies:
   package_info_plus: ^4.2.0
 #  bitsdojo_window: ^0.1.5
   share_plus: ^7.2.2
+  excel: ^4.0.2
+  mobile_scanner: ^4.0.1
 
 
 
