--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 4.3.1+15
+version: 4.3.2+16
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -19,7 +19,7 @@ dependencies:
   currency_text_input_formatter: ^2.1.7
   easy_mask: ^2.0.1
   provider: ^6.0.3
-  dropdown_button2: ^1.8.2
+  dropdown_button2: ^2.3.9
   sqflite: ^2.1.0
   intl: ^0.19.0
   permission_handler: ^10.1.0
@@ -50,14 +50,15 @@ dependencies:
   gap: ^3.0.1
   flutter_animate: ^4.4.0
   lottie: ^2.6.0
-  cafebazaar_flutter: ^1.0.2
+#  cafebazaar_flutter: ^1.0.2
   google_fonts: ^4.0.4
   package_info_plus: ^4.2.0
 #  bitsdojo_window: ^0.1.5
   share_plus: ^7.2.2
   excel: ^4.0.2
   mobile_scanner: ^4.0.1
-
+  flutter_poolakey: ^2.2.0
+  image_picker: ^1.0.7
 
 
 
@@ -74,6 +75,7 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^2.0.0
   build_runner: ^2.3.3
+  change_app_package_name: ^1.1.0
 
 
 
