--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   open_filex: ^4.3.2
   flutter_launcher_icons: ^0.12.0
   http: ^0.13.6
-#  myket_iap: ^1.1.4
   image: ^4.1.3
   image_compression_flutter: ^1.0.3
   archive: ^3.4.7
@@ -57,7 +56,8 @@ dependencies:
   share_plus: ^7.2.2
   excel: ^4.0.2
   mobile_scanner: ^4.0.1
-  flutter_poolakey: ^2.2.0
+#  flutter_poolakey: ^2.2.0
+  myket_iap: ^1.1.5
   image_picker: ^1.0.7
 
 
