--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,15 +52,15 @@ dependencies:
 #  cafebazaar_flutter: ^1.0.2
   google_fonts: ^4.0.4
   package_info_plus: ^4.2.0
-#  bitsdojo_window: ^0.1.5
+  bitsdojo_window: ^0.1.5
   share_plus: ^7.2.2
   excel: ^4.0.2
   mobile_scanner: ^4.0.1
-#  flutter_poolakey: ^2.2.0
-  myket_iap: ^1.1.5
+  flutter_poolakey: ^2.2.0
+#  myket_iap: ^1.1.5
   image_picker: ^1.0.7
   flutter_typeahead: ^4.3.1
-#  photo_view: ^0.15.0
+  photo_view: ^0.15.0
 
 
 
