--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 4.4.0+18
+version: 4.4.1+19
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -52,7 +52,7 @@ dependencies:
 #  cafebazaar_flutter: ^1.0.2
   google_fonts: ^4.0.4
   package_info_plus: ^4.2.0
-  bitsdojo_window: ^0.1.5
+#  bitsdojo_window: ^0.1.5
   share_plus: ^7.2.2
   excel: ^4.0.2
   mobile_scanner: ^4.0.1
