--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
 
     <application
+        android:requestLegacyExternalStorage="true"
         android:label="Price list"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
