--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 4.5.0+22
+version: 4.5.0+23
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -56,8 +56,8 @@ dependencies:
   share_plus: ^7.2.2
   excel: ^4.0.2
   mobile_scanner: ^4.0.1
-#  flutter_poolakey: ^2.2.0
-  myket_iap: ^1.1.5
+  flutter_poolakey: ^2.2.0
+#  myket_iap: ^1.1.5
   image_picker: ^1.0.7
   flutter_typeahead: ^4.3.1
   photo_view: ^0.15.0
@@ -70,8 +70,8 @@ dependencies:
   connectivity_plus: ^5.0.2
   carousel_slider: ^4.2.1
 
-dependency_overrides:
-  intl: ^0.19.0
+#dependency_overrides:
+#  intl: ^0.19.0
 
 
 
