--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,13 +45,13 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
     //TODO:myket market configuration for in app purchase
-    defaultConfig {
-        def marketApplicationId = "ir.mservices.market"
-        def marketBindAddress = "ir.mservices.market.InAppBillingService.BIND"
-        manifestPlaceholders += [marketApplicationId: "${marketApplicationId}",
-                                 marketBindAddress  : "${marketBindAddress}",
-                                 marketPermission   : "${marketApplicationId}.BILLING"]
-    }
+//    defaultConfig {
+//        def marketApplicationId = "ir.mservices.market"
+//        def marketBindAddress = "ir.mservices.market.InAppBillingService.BIND"
+//        manifestPlaceholders += [marketApplicationId: "${marketApplicationId}",
+//                                 marketBindAddress  : "${marketBindAddress}",
+//                                 marketPermission   : "${marketApplicationId}.BILLING"]
+//    }
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "ir.mlggrand.priceList"
@@ -95,4 +95,6 @@ dependencies {
     implementation "com.github.cafebazaar.Poolakey:poolakey-rx3:2.2.0"
     // RxJava 2
     implementation "com.github.cafebazaar.Poolakey:poolakey-rx:2.2.0"
+
+//    implementation "com.github.cafebazaar.Poolakey:poolakey:2.2.0"
 }
