--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   flutter_timer_countdown: ^1.0.7
   connectivity_plus: ^5.0.2
   carousel_slider: ^4.2.1
+  flutter_staggered_grid_view: ^0.7.0
 
 #dependency_overrides:
 #  intl: ^0.19.0
