--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 4.5.0+23
+version: 4.5.1+24
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -70,6 +70,7 @@ dependencies:
   connectivity_plus: ^5.0.2
   carousel_slider: ^4.2.1
   flutter_staggered_grid_view: ^0.7.0
+  cached_network_image: ^3.3.1
 
 #dependency_overrides:
 #  intl: ^0.19.0
@@ -117,6 +118,7 @@ flutter:
 
   assets:
   - assets/images/
+  - assets/icons/
   - assets/fonts/
   - assets/animations/
   - assets/files/
