--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_staggered_grid_view: ^0.7.0
   cached_network_image: ^3.3.1
+  drag_and_drop_lists: ^0.4.1
 
 #dependency_overrides:
 #  intl: ^0.19.0
