--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 5.0.3+25
+version: 5.0.5+26
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -49,7 +49,6 @@ dependencies:
   gap: ^3.0.1
   flutter_animate: ^4.4.0
   lottie: ^2.6.0
-  google_fonts: ^4.0.4
   package_info_plus: ^4.2.0
 #  bitsdojo_window: ^0.1.5
   share_plus: ^7.2.2
@@ -74,6 +73,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   cached_network_image: ^3.3.1
   drag_and_drop_lists: ^0.4.1
+  persian_datetime_picker: ^2.6.0
 
 #dependency_overrides:
 #  intl: ^0.19.0
