--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Price List project
 publish_to: 'none'
 
 
-version: 5.0.5+26
+version: 5.1.0+27
 
 environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
@@ -17,10 +17,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 #  currency_text_input_formatter: ^2.1.7
-  easy_mask: ^2.0.1
+#  easy_mask: ^2.0.1
   provider: ^6.0.3
   dropdown_button2: ^2.3.9
-  sqflite: ^2.1.0
   intl: ^0.19.0
   permission_handler: ^10.1.0
   auto_size_text: ^3.0.0
@@ -29,7 +28,7 @@ dependencies:
   path_provider: ^2.0.11
   font_awesome_flutter: ^10.2.1
   url_launcher: ^6.1.6
-  flutter_automation: ^2.0.0
+#  flutter_automation: ^2.0.0
   persian_number_utility: ^1.1.3
   double_back_to_close_app: ^2.1.0
   hive: ^2.2.3
@@ -44,7 +43,7 @@ dependencies:
   image: ^4.1.3
   image_compression_flutter: ^1.0.3
   archive: ^3.4.7
-  expandable: ^5.0.1
+#  expandable: ^5.0.1
   flutter_slidable: ^2.0.0
   gap: ^3.0.1
   flutter_animate: ^4.4.0
