--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   mobile_scanner: ^4.0.1
 
 #  flutter_poolakey: ^2.2.0
-  myket_iap: ^1.1.6
+#  myket_iap: ^1.1.6
 #  cafebazaar_flutter: ^1.0.2
 
   image_picker: ^1.0.7
